external trackpad stops to work with lid closed [libinput 1.11.0]
I'm testing libinput 1.11.0 on Arch Linux for issue #26 (closed): I can spot another weird behavior that looks unrelated. Using an external Magic Trackpad and an external monitor, upon lid closure the external trackpad stops to work. From the debug output I guess libinput is supposed to manage lid closure disabling internal trackpads. It looks that it includes my external one too.
$ /usr/lib/libinput/libinput-debug-events [140/1811]
-event3 DEVICE_ADDED Power Button seat0 default group1 cap:k
-event4 DEVICE_ADDED Video Bus seat0 default group2 cap:k
-event1 DEVICE_ADDED Power Button seat0 default group3 cap:k
-event0 DEVICE_ADDED Lid Switch seat0 default group4 cap:S
-event2 DEVICE_ADDED Sleep Button seat0 default group5 cap:k
-event6 DEVICE_ADDED Yubico Yubikey NEO OTP+U2F+CCID seat0 default group6 cap:k
-event20 DEVICE_ADDED Trackpad di Tod Allen seat0 default group7 cap:pg size 132x112mm tap(dl off) left scroll-nat scroll-2fg-edge click-buttonareas-clickfing
er
-event7 DEVICE_ADDED ELAN Touchscreen seat0 default group8 cap:t size 305x170mm ntouches 10 calib
-event19 DEVICE_ADDED Integrated_Webcam_HD: Integrate seat0 default group9 cap:k
-event9 DEVICE_ADDED DLL0704:01 06CB:76AE Touchpad seat0 default group10 cap:pg size 101x57mm tap(dl off) left scroll-nat scroll-2fg-edge click-buttonareas-clickfinge
r dwt-on
-event13 DEVICE_ADDED HDA Intel PCH Headphone Mic seat0 default group11 cap:
-event14 DEVICE_ADDED HDA Intel PCH HDMI/DP,pcm=3 seat0 default group11 cap:
-event15 DEVICE_ADDED HDA Intel PCH HDMI/DP,pcm=7 seat0 default group11 cap:
-event16 DEVICE_ADDED HDA Intel PCH HDMI/DP,pcm=8 seat0 default group11 cap:
-event17 DEVICE_ADDED HDA Intel PCH HDMI/DP,pcm=9 seat0 default group11 cap:
-event18 DEVICE_ADDED HDA Intel PCH HDMI/DP,pcm=10 seat0 default group11 cap:
-event8 DEVICE_ADDED Intel HID events seat0 default group12 cap:k
-event11 DEVICE_ADDED Dell WMI hotkeys seat0 default group13 cap:k
-event5 DEVICE_ADDED AT Translated Set 2 keyboard seat0 default group14 cap:k
-event20 POINTER_MOTION +4.30s 0.97/ 0.00
event20 POINTER_MOTION +4.30s 0.46/ 0.00
event20 POINTER_MOTION +4.30s 0.46/ 0.00
....
event20 POINTER_MOTION +5.01s 0.00/ 1.87
event20 POINTER_MOTION +5.03s -0.23/ 0.47
event20 POINTER_MOTION +5.04s -0.23/ 0.47
event20 POINTER_MOTION +5.05s -0.23/ 0.23
event20 POINTER_MOTION +5.15s -0.21/ 0.00
-event0 SWITCH_TOGGLE +7.88s switch lid state 1
event0 SWITCH_TOGGLE +20.54s switch lid state 0
-event20 POINTER_MOTION +23.48s -0.41/ -1.27
event20 POINTER_MOTION +23.48s -2.06/ -0.94
event20 POINTER_MOTION +23.48s 0.00/ -0.23
event20 POINTER_MOTION +23.48s -0.92/ -0.70
event20 POINTER_MOTION +23.48s -0.92/ -0.70
....
During the experiment, upon lid closure, the cursor was stuck and no events were recognized by libinput-debug-events
. Everything started to work again upon lid aperture.
Until libinput 1.10.7 the lid closure was correctly managed.