touchpad: don't pair external touchpads with lid/tablet mode switches

https://gitlab.freedesktop.org/libinput/libinput/issues/29

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>